# peaches

./: .gitignore  Cargo.toml  README.md  USAGE.md  config.toml  go.mod  go.sum  install.sh  main.go  release.sh
cmd/: config.go  go.go  projects.go  root.go  ssh.go
denv/: denv.yml
denv/roles/gantsign.oh-my-zsh/meta/: .galaxy_install_info
denv/tasks/: core.yml  git.yml  zsh.yml
src/: config.rs  dirs.rs  docker.rs  dotfiles.rs  fuzzy_finder.rs  main.rs  notes.rs  projects.rs  ssh.rs  tasks.rs  tmux.rs
utils/: config.go  fs.go  fuzzy.go  ssh.go  tmux.go
