[package]
name = "peaches"
version = "0.4.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
skim = "*"
itertools = "*"
sc = "*"
toml = "0.5.10"
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
magic-crypt = { version = "*" }
casual = "0.2"
